force-app/main/default/objects/Monthly_Grant_Hours__c/Monthly_Grant_Hours__c.object-meta.xml
<CustomObject>
    <description>Object for capturing grant eligible hours that are used for monthly totals on Grant Contact.</description>
    <label>Monthly Grant Hours</label>
    <nameField>
        <displayFormat>MGH{00000000}</displayFormat>
        <label>Monthly Grant Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Grant Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>