force-app/main/default/objects/Monthly_Grant_Hours__c/fields/Commitment_Met__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Met__c</fullName>
    <description>Evaluates true if number of Stipend Eligible Hours is greater than the Grant Contact&#39;s Weekly Hour Commitment times weeks in that month</description>
    <formula>Stipend_Eligible__c &gt;=  
 Grant_Contact__r.Grant__r.Monthly_Hour_Commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Met</label>
    <type>Checkbox</type>
</CustomField>