force-app/main/default/objects/Monthly_Grant_Hours__c/fields/First_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_of_Month__c</fullName>
    <label>First of Month</label>
    <type>Date</type>
</CustomField>