force-app/main/default/objects/Monthly_Grant_Hours__c/fields/Grant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grant Contact</label>
    <referenceTo>Grant_Contact__c</referenceTo>
    <relationshipName>Monthly_Stipend_Hours</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>