force-app/main/default/objects/Monthly_Grant_Hours__c/fields/Stipend_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Eligible__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stipend eligible time entry hours for given month.</description>
    <inlineHelpText>Stipend eligible time entry hours for given month.</inlineHelpText>
    <label>Stipend Eligible</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>