force-app/main/default/objects/Monthly_Grant_Hours__c/fields/Stipend_Ineligible__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Ineligible__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stipend ineligible time entry hours for given month.</description>
    <inlineHelpText>Stipend ineligible time entry hours for given month.</inlineHelpText>
    <label>Stipend Ineligible</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>